Fix screen overflow issue
Joe

--- a/src/components/HomepageLogo/HomepageLogo.scss
+++ b/src/components/HomepageLogo/HomepageLogo.scss
@@ -1,7 +1,7 @@
 .homepageLogo img {
   display: block;
   margin: 0 auto;
-  padding-top: 70px;
+  padding-top: 50px;
   padding-bottom: 30px;
   max-width: 100%;
 }
